syntax = "proto3";
package VrLifeShared.Networking.NetworkingModels;

message EventMsg { // Event message from client to server
	uint32 eventType = 1;
	oneof ValueType {
		uint32 intValue = 2;
		float floatValue = 3;
		bytes customValue = 4;
	}
	oneof AppType {
		uint32 instanceId = 5; // Nullable<uint>
	}
}